# cpp-cli-auth-boilerplate

./: CMakeLists.txt  main.cpp
data/: User.h
database/: DatabaseManager.cpp  DatabaseManager.h  crime_lite.db  schema.sql
model/: User.cpp
service/: UserService.cpp  UserService.h
